fix hives overflow

--- a/css/style.css
+++ b/css/style.css
@@ -152,6 +152,7 @@ footer a {
 
 .divHiveImg {
     position:relative; 
+    overflow: hidden;
 }
 
 .hiveRight {
